@@ -1337,17 +1337,12 @@ MUX_RESULT CQueryClient::DisconnectObject(void)
     return MUX_S_OK;
 }
 
-
-MUX_RESULT CQueryClient::Result(UINT32 iQueryHandle, const UTF8 *pResultSet)
+MUX_RESULT CQueryClient::Result(UINT32 hQuery, const UTF8 *pResult)
 {
-    UNUSED_PARAMETER(iQueryHandle);
-
-    // TODO: Use iQueryHandle to lookup the dbref/attr pair to @trigger within a context of pResultSet.
-    //
-    STARTLOG(LOG_ALWAYS, "INI", "LOAD");
-    log_printf("ResultSet is %s", pResultSet);
-    ENDLOG;
-    return MUX_S_OK;;
+#if defined(STUB_SLAVE)
+    query_complete(hQuery, pResult);
+#endif // STUB_SLAVE
+    return MUX_S_OK;
 }
 
 // Factory for CQueryClient component which is not directly accessible.
